styles.css
.main-container {
    display: flex;
    justify-content: center;
    flex-direction: column;
    text-align: center;
    align-items: center;
}

.content-holder {
    display: flex;
    flex-direction: column;
}

.title {
    transition: 0.5s;
}

.input-section {
    display: flex;
    justify-content: center;
    width: 100%;
}

.input {
    padding-left: 20px;
    margin: 20px;
    margin-right: 0px;
    height: 50px;
    width: 25%;
    min-width: 250px;
    border-radius: 50px 0px 0px 50px;
    background-color: lightgray;
    border: none;
    outline: none;
    font-size: 1.25em;
    transition: 0.3s;
}

.input:hover {
    background-color: rgb(181, 181, 181);
}

.add {
    padding-top: 2px;
    margin: 20px;
    margin-left: 0px;
    height: 52px;
    margin-right: 52px;
    width: 52px;
    border-radius: 0px 50px 50px 0px;
    border: none;
    background-color: lightgray;
    transition: 0.3s;
}

.add:hover {
    background-color: rgb(181, 181, 181);
}

.remove,
.strike-btn {
    display: flex;
    background-color: rgba(255, 255, 255, 0);
    border: none;
    border-radius: 100px;
    width: 40px;
    height: 40px;
    margin: 10px;
    /* padding-top: 4.5%; */
    align-items: center;
    justify-content: center;
    transition: 0.3s;
}


.remove-dark,
.strike-btn-dark {
    display: flex;
    background-color: rgba(255, 255, 255, 0);
    border: none;
    border-radius: 100px;
    width: 40px;
    height: 40px;
    margin: 10px;
    /* padding-top: 4.5%; */
    align-items: center;
    justify-content: center;
    filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(131deg) brightness(104%) contrast(101%);

    transition: 0.3s;
}

.remove:hover,
.strike-btn:hover {
    background-color: rgb(136, 136, 136);
}

.remove-dark:hover,
.strike-btn-dark:hover {
    background-color: rgb(44, 44, 44);
}

.item-text {
    font-size: 1.25em;
    transition: 0.3s;
}

.todo-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 40%;
}

.item-div {
    display: flex;
    justify-content: space-between;
    padding: 0px;
    width: 50%;
}

.button-div {
    display: flex;
    justify-content: center;
    align-items: center;
}

.foot {
    position: absolute;
    left: 0px;
    right: 0px;
    bottom: 0px;
    display: flex;
    justify-content: end;
    padding: 30px;
    padding-right: 35px;
    align-items: center;
}


.dark-mode-btn {
    background: none;
    border: none;
    width: 60px;
    height: 60px;
    filter: invert(0%) sepia(9%) saturate(7465%) hue-rotate(340deg) brightness(109%) contrast(97%);
}

.dark-mode-btn img {
    width: 75%;
}

body {
    margin: 20px;
    padding: 20px;
    font-family: sans-serif;

    background: #ffffff;
    transition: 0.5s;
    /* text colour, title colour */
}

